Minor cosmetic changes and adding facebook event and youtube link

--- a/src/contact.html
+++ b/src/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Young Americans - Boston's David Bowie Tribute Band - Contact</title>
+    <title>Young Americans - Boston's David Bowie Tribute Band - Contact Us</title>
     <!-- bower:css -->
     <!-- endinject -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
