--- a/src/gigs.html
+++ b/src/gigs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Young Americans - Boston's David Bowie Tribute Band - Upcoming Gigs</title>
+    <title>Young Americans - Boston David Bowie Tribute Band - Upcoming Shows</title>
     <!-- bower:css -->
     <!-- endinject -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
@@ -24,20 +24,22 @@
                 <p class="white">Bella Luna Restaurant and Milky Way Lounge
                     &nbsp;<a target="_blank" href="https://www.google.com/maps/place/Bella+Luna+%26+The+Milky+Way/@42.3145051,-71.106033,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3797b7375c277:0xf70e6004c4bf8e7c!8m2!3d42.3145051!4d-71.1038443">Map</a>
                 </p>
+                <a href="https://www.facebook.com/events/247982242318542/">Facebook Event</a>
                 <p class="white">Boston based tribute bands Gunpowder Gelatine (Queen) and The Young Americans (David Bowie)
                     come together for one night to celebrate the excellent song catalogs of the two most brilliant artists in Rock 'N' Roll history.</p>
                 <a class="buy-ticket-link" target="_blank" href="http://www.ticketweb.com/t3/sale/SaleEventDetail?eventId=7253785&pl=rockonconcerts&dispatch=loadSelectionData">Buy Tickets</a>
             </div>
             <div class="gig-info">
-                <h2 class="red">Under Pressure 2: Bowie and Queen Tribute Night, Jamaica Plain, MA </h2>
+                <h2 class="red">Under Pressure 2: Bowie and Queen Tribute Night </h2>
                 <p class="white">Saturday, April 29, 2017</p>
                 <p class="white">9:00 - 12:00 AM</p>
 
                 <p class="white">Olympia's Zorba Music Hall, Lowell,  MA
                     &nbsp;<a target="_blank" href="https://www.google.com/maps/place/Olympia's+Zorba+Music+Hall/@42.6462018,-71.3182251,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3a44168262e0d:0x922b064e7f32cc6d!8m2!3d42.6460885!4d-71.3160688">Map</a>
                 </p>
+                <a href="https://www.facebook.com/events/270231540067692/">Facebook Event</a>
                 <p class="white">The Young Americans (Bowie Tribute) are teaming up again with Gunpowder Geltaine (The All Female Queen Tribute) for a night of glam rock and pop classics.</p>
-                <a class="buy-ticket-link" target="_blank" href="https://big-crush-records.ticketleap.com/under-pressure/dates/Apr-29-2017_at_0900PM">Buy Tickets</a>
+                <a href="" class="buy-ticket-link" target="_blank" href="https://big-crush-records.ticketleap.com/under-pressure/dates/Apr-29-2017_at_0900PM">Buy Tickets</a>
             </div>
             <div class="gig-info">
                 <h2 class="red">David Bowie Tribute Night</h2>
@@ -47,6 +49,7 @@
                 <p class="white">The New World Tavern, Plymouth, MA
                     &nbsp;<a target="_blank" href="https://www.google.com/maps/place/The+New+World+Tavern/@41.9568809,-70.6651169,15z/data=!4m2!3m1!1s0x0:0xdc14791d322264f?sa=X&ved=0ahUKEwj8i7-un7TSAhXk34MKHRpYBDoQ_BIIdDAK">Map</a>
                 </p>
+                <a href="https://www.facebook.com/events/688312418006655/">Facebook Event</a>
                 <p class="white">The Young Americans (David Bowie Tribute Band) are playing All Bowie All Night. Expect to sing along with the hits (Changes, Space Oddity, Rebel Rebel), dance (Let's Dance, Golden Years, Fame) and celebrate the vast song catalog of the most unique artist of all.</p>
             </div>
         </section>
