--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Young Americans - Boston's David Bowie Tribute Band - Home</title>
+    <title>Young Americans - Boston David Bowie Tribute Band</title>
     <!-- bower:css -->
     <!-- endinject -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
@@ -15,9 +15,9 @@
     @@include('./includes/header.html')
      <section class="index-hero page-section row">
          <div class="index-hero-left col-xs-12 col-sm-8">
-             <h1 class="red">The Young Americans</h1>
-             <h2 class="peach">Boston's David Bowie Tribute Band</h2>
-             <h3 class="white">David Bowie 1947-2016</h3>
+             <h1 class="red hero-header">The Young Americans</h1>
+             <h2 class="peach text-center">Boston's David Bowie Tribute Band</h2>
+             <h3 class="white text-center">David Bowie 1947-2016</h3>
          </div>
          <div class="index-hero-right col-xs-12 col-sm-4">
 
@@ -26,7 +26,7 @@
       <section class="row index-description page-section-no-border">
           <!--<div class="col-xs-6 index-description-left"></div>-->
           <div class="col-xs-12 index-description-content">
-              <h1 class="red">The Young Americans</h1>
+              <h1 class="red hero-header">The Young Americans</h1>
               <h2 class="peach">Celebrate the most decorated rock and roll artist of all time as we pay tribute and play
               songs from all of the eras including:</h2>
               <ul>
