Add in viewport meta tags

--- a/src/contact.html
+++ b/src/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Young Americans - Boston's David Bowie Tribute Band - Contact Us</title>
     <!-- bower:css -->
     <!-- endinject -->
