--- a/src/media.html
+++ b/src/media.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Young Americans - Boston David Bowie Tribute Band - Media</title>
     <!-- bower:css -->
     <!-- endinject -->
