--- a/src/band.html
+++ b/src/band.html
@@ -33,10 +33,11 @@
                                </div>
                            </div>
                            <div class="band-member-text">
-                                <p class="white">Brien Sweet (<a href="http://www.briensweet.com">www.briensweet.com</a>) is known around Boston as a unique quirky musician, so it's very fitting that he would take on the role of channelling David Bowie.
-                                    He's performed in original alternative rock bands Safer By The Shore (<a href="http://www.saferbytheshore.com">www.saferbytheshore.com</a>) and Rock and Roll Rumble <a href="http://wzlx.cbslocal.com/category/rock-and-roll-rumble/2015-rumble-bands/">(http://wzlx.cbslocal.com/category/rock-and-roll-rumble/2015-rumble-bands/)</a>
-                                    alumni Band Without Hands <a href="http://www.bandwithouthands.com">(www.bandwithouthands.com)</a>.
-                                    Always eager to please any crowd, since 2008 Brien has also fronted the NH based party band Reckless. <a href="http://www.recklesspartyband.com">(www.recklesspartyband.com)</a></p>
+                               <p class="white"><a href="http://www.briensweet.com">Brien Sweet</a> is known around Boston as a unique quirky musician, so it's very fitting that he would take on the role of channelling David Bowie.
+                                   He's performed in original alternative rock bands <a href="http://www.saferbytheshore.com">Safer By The Shore</a> and <a href="http://wzlx.cbslocal.com/category/rock-and-roll-rumble/2015-rumble-bands/">Rock and Roll Rumble</a>
+                                    alumni Band Without Hands <a href="http://www.bandwithouthands.com">Band Without Hands</a>.
+                                    Always eager to please any crowd, since 2008 Brien has also fronted the NH based party band <a href="http://www.recklesspartyband.com">Reckless</a>
+                               </p>
                                <p class="white">
                                    Favorite Bowie Album: Low
                                </p>
