Fix small screen rendering issues with home page and mobile navigation

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
               <h1 class="red hero-header">The Young Americans</h1>
               <h2 class="peach">Celebrate the most decorated rock and roll artist of all time as we pay tribute and play
               songs from all of the eras including:</h2>
-              <ul>
+              <ul class="sample-song-list">
                   <li>Heroes</li>
                   <li>Space Oddity</li>
                   <li>Changes</li>
