Fix duplicate href

--- a/src/gigs.html
+++ b/src/gigs.html
@@ -40,7 +40,7 @@
                 </p>
                 <a href="https://www.facebook.com/events/270231540067692/">Facebook Event</a>
                 <p class="white">The Young Americans (Bowie Tribute) are teaming up again with Gunpowder Geltaine (The All Female Queen Tribute) for a night of glam rock and pop classics.</p>
-                <a href="" class="buy-ticket-link" target="_blank" href="https://big-crush-records.ticketleap.com/under-pressure/dates/Apr-29-2017_at_0900PM">Buy Tickets</a>
+                <a class="buy-ticket-link" target="_blank" href="https://big-crush-records.ticketleap.com/under-pressure/dates/Apr-29-2017_at_0900PM">Buy Tickets</a>
             </div>
             <div class="gig-info">
                 <h2 class="red">David Bowie Tribute Night</h2>
