Text edits for band bios

--- a/src/band.html
+++ b/src/band.html
@@ -35,8 +35,8 @@
                            <div class="band-member-text">
                                <p class="white"><a href="http://www.briensweet.com">Brien Sweet</a> is known around Boston as a unique quirky musician, so it's very fitting that he would take on the role of channelling David Bowie.
                                    He's performed in original alternative rock bands <a href="http://www.saferbytheshore.com">Safer By The Shore</a> and <a href="http://wzlx.cbslocal.com/category/rock-and-roll-rumble/2015-rumble-bands/">Rock and Roll Rumble</a>
-                                    alumni Band Without Hands <a href="http://www.bandwithouthands.com">Band Without Hands</a>.
-                                    Always eager to please any crowd, since 2008 Brien has also fronted the NH based party band <a href="http://www.recklesspartyband.com">Reckless</a>
+                                    alumni <a href="http://www.bandwithouthands.com">Band Without Hands</a>.
+                                    Always eager to please any crowd, since 2008 Brien has also fronted the NH based party band <a href="http://www.recklesspartyband.com">Reckless</a>.
                                </p>
                                <p class="white">
                                    Favorite Bowie Album: Low
@@ -108,7 +108,7 @@
                             </div>
                             <div class="band-member-text">
                                 <p class="white">Jake has been playing bass semi-professionally for 6 years and The Young Americans is Jake's first band on the Boston music scene.
-                                Jake has been a Bowie fan since first hearing his songs on the PC video game "Omnikron the Nomad Soul" in  the 8th grade. Jake's previous band experiences have been
+                                A past avid gamer, Jake has been a Bowie fan since first hearing his songs on the PC video game "Omnikron the Nomad Soul" in  the 8th grade. Jake's previous band experiences have been
                                 in a 90's alternative rock cover band in Hartford, CT.</p>
                                 <p class="white">
                                     Favorite Bowie Album: Station to Station
