--- a/src/gigs.html
+++ b/src/gigs.html
@@ -23,9 +23,9 @@
                 <p class="white">9:00 - 12:00 AM</p>
 
                 <p class="white">Bella Luna Restaurant and Milky Way Lounge
-                    &nbsp;<a target="_blank" href="https://www.google.com/maps/place/Bella+Luna+%26+The+Milky+Way/@42.3145051,-71.106033,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3797b7375c277:0xf70e6004c4bf8e7c!8m2!3d42.3145051!4d-71.1038443">Map</a>
+                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/Bella+Luna+%26+The+Milky+Way/@42.3145051,-71.106033,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3797b7375c277:0xf70e6004c4bf8e7c!8m2!3d42.3145051!4d-71.1038443">Map</a>
                 </p>
-                <a href="https://www.facebook.com/events/247982242318542/">Facebook Event</a>
+                <a class="block facebook-link" href="https://www.facebook.com/events/247982242318542/">Facebook Event</a>
                 <p class="white">Boston based tribute bands Gunpowder Gelatine (Queen) and The Young Americans (David Bowie)
                     come together for one night to celebrate the excellent song catalogs of the two most brilliant artists in Rock 'N' Roll history.</p>
                 <a class="buy-ticket-link" target="_blank" href="http://www.ticketweb.com/t3/sale/SaleEventDetail?eventId=7253785&pl=rockonconcerts&dispatch=loadSelectionData">Buy Tickets</a>
@@ -36,9 +36,9 @@
                 <p class="white">9:00 - 12:00 AM</p>
 
                 <p class="white">Olympia's Zorba Music Hall, Lowell,  MA
-                    &nbsp;<a target="_blank" href="https://www.google.com/maps/place/Olympia's+Zorba+Music+Hall/@42.6462018,-71.3182251,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3a44168262e0d:0x922b064e7f32cc6d!8m2!3d42.6460885!4d-71.3160688">Map</a>
+                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/Olympia's+Zorba+Music+Hall/@42.6462018,-71.3182251,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3a44168262e0d:0x922b064e7f32cc6d!8m2!3d42.6460885!4d-71.3160688">Map</a>
                 </p>
-                <a href="https://www.facebook.com/events/270231540067692/">Facebook Event</a>
+                <a class="block facebook-link" href="https://www.facebook.com/events/270231540067692/">Facebook Event</a>
                 <p class="white">The Young Americans (Bowie Tribute) are teaming up again with Gunpowder Geltaine (The All Female Queen Tribute) for a night of glam rock and pop classics.</p>
                 <a class="buy-ticket-link" target="_blank" href="https://big-crush-records.ticketleap.com/under-pressure/dates/Apr-29-2017_at_0900PM">Buy Tickets</a>
             </div>
@@ -48,9 +48,9 @@
                 <p class="white">9:00 - 12:00 AM</p>
 
                 <p class="white">The New World Tavern, Plymouth, MA
-                    &nbsp;<a target="_blank" href="https://www.google.com/maps/place/The+New+World+Tavern/@41.9568809,-70.6651169,15z/data=!4m2!3m1!1s0x0:0xdc14791d322264f?sa=X&ved=0ahUKEwj8i7-un7TSAhXk34MKHRpYBDoQ_BIIdDAK">Map</a>
+                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/The+New+World+Tavern/@41.9568809,-70.6651169,15z/data=!4m2!3m1!1s0x0:0xdc14791d322264f?sa=X&ved=0ahUKEwj8i7-un7TSAhXk34MKHRpYBDoQ_BIIdDAK">Map</a>
                 </p>
-                <a href="https://www.facebook.com/events/688312418006655/">Facebook Event</a>
+                <a class="block facebook-link" href="https://www.facebook.com/events/688312418006655/">Facebook Event</a>
                 <p class="white">The Young Americans (David Bowie Tribute Band) are playing All Bowie All Night. Expect to sing along with the hits (Changes, Space Oddity, Rebel Rebel), dance (Let's Dance, Golden Years, Fame) and celebrate the vast song catalog of the most unique artist of all.</p>
             </div>
         </section>
