Fix duplicate text on index page and change ... location

--- a/src/index.html
+++ b/src/index.html
@@ -35,15 +35,15 @@
                   <li>Space Oddity</li>
                   <li>Changes</li>
                   <li>Rebel Rebel</li>
-                  <li>Changes</li>
+                  <li>Fame</li>
                   <li>Ziggy Stardust</li>
                   <li>Suffragette City</li>
                   <li>Let's Dance</li>
                   <li>China Girl</li>
                   <li>Young Americans</li>
-                  <li>Life on Mars...</li>
+                  <li>Life on Mars</li>
               </ul>
-              <p class="peach">And many more!</p>
+              <p class="peach">...And many more!</p>
           </div>
      </section>
        <section class="row index-secondary-hero page-section-no-border">
