Add Major Tom to Space Oddity title

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
               songs from all of the eras including:</h2>
               <ul class="sample-song-list">
                   <li>Heroes</li>
-                  <li>Space Oddity</li>
+                  <li>Space Oddity (Major Tom)</li>
                   <li>Changes</li>
                   <li>Rebel Rebel</li>
                   <li>Fame</li>
