Fix issue with email link display on small screen

--- a/src/contact.html
+++ b/src/contact.html
@@ -20,7 +20,7 @@
         <section class="contact-content page-section row">
             <div class="col-xs-12">
             <p class="white">For bookings or to contact the band please email us at:</p>
-            <a href="mailto:youngamericansbowie@gmail.com" target="_top">youngamericansbowie@gmail.com</a>
+            <a class="email-us-link" href="mailto:youngamericansbowie@gmail.com" target="_top">youngamericansbowie@gmail.com</a>
             </div>
         </section>
         @@include('./includes/footer.html')
