4/25/2017 Adding new media and images

--- a/src/media.html
+++ b/src/media.html
@@ -26,6 +26,26 @@
                 </div>
             </div>
         </section>
+        <section class="media-content page-section row">
+            <div class="media-container">
+                <h1 class="red">"Heroes" - Live</h1>
+                <p class="white">Milky Way Lounge, Jamaica Plain MA</p>
+                <p class="white">March 31st, 2017</p>
+                <div class="embed-wrapper">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/fE8GCejR-bI" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        <section class="media-content page-section row">
+            <div class="media-container">
+                <h1 class="red">"Jean Genie & Queen Bitch" - Live</h1>
+                <p class="white">Milky Way Lounge, Jamaica Plain MA</p>
+                <p class="white">March 31st, 2017</p>
+                <div class="embed-wrapper">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pJAUtmXLxjo" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
         @@include('./includes/footer.html')
     </div>
 </div>
