Website updates for 5/142017. Includes latest imagery

--- a/src/band.html
+++ b/src/band.html
@@ -14,8 +14,9 @@
     @@include('./includes/mobile-menu.html')
     <div class="container-fluid">
         @@include('./includes/header.html')
-        <h1 class="hero-header">The Musicians</h1>
-        <section class="band-hero page-section row"></section>
+        <section class="band-hero page-section row">
+            <h1 class="hero-header">The Band</h1>
+        </section>
         <section class="band-members page-section row">
             <div class="band-members-description text-center">
 
