--- a/src/gigs.html
+++ b/src/gigs.html
@@ -14,25 +14,15 @@
     @@include('./includes/mobile-menu.html')
     <div class="container-fluid">
         @@include('./includes/header.html')
-        <h1 class="hero-header">Upcoming Shows</h1>
-        <section class="gigs-hero page-section row"></section>
-        <section class="gigs-content page-section row">
-            <div class="gig-info">
-                <h2 class="red">Under Pressure 2: Bowie and Queen Tribute Night </h2>
-                <p class="white">Saturday, April 29, 2017</p>
-                <p class="white">9:00 - 12:00 AM</p>
 
-                <p class="white">Olympia's Zorba Music Hall, Lowell,  MA
-                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/Olympia's+Zorba+Music+Hall/@42.6462018,-71.3182251,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3a44168262e0d:0x922b064e7f32cc6d!8m2!3d42.6460885!4d-71.3160688">Map</a>
-                </p>
-                <a class="block facebook-link" href="https://www.facebook.com/events/270231540067692/">Facebook Event</a>
-                <p class="white">The Young Americans (Bowie Tribute) are teaming up again with Gunpowder Geltaine (The All Female Queen Tribute) for a night of glam rock and pop classics.</p>
-                <a class="buy-ticket-link" target="_blank" href="https://big-crush-records.ticketleap.com/under-pressure/dates/Apr-29-2017_at_0900PM">Buy Tickets</a>
-            </div>
+        <section class="gigs-hero page-section row">
+            <h1 class="hero-header">Upcoming Shows</h1>
+        </section>
+        <section class="gigs-content page-section row">
             <div class="gig-info">
                 <h2 class="red">David Bowie Tribute Night</h2>
                 <p class="white">Saturday, June 24, 2017</p>
-                <p class="white">9:00 - 12:00 AM</p>
+                <p class="white">9:00 PM - 12:00 AM</p>
 
                 <p class="white">The New World Tavern, Plymouth, MA
                     <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/The+New+World+Tavern/@41.9568809,-70.6651169,15z/data=!4m2!3m1!1s0x0:0xdc14791d322264f?sa=X&ved=0ahUKEwj8i7-un7TSAhXk34MKHRpYBDoQ_BIIdDAK">Map</a>
