--- a/src/media.html
+++ b/src/media.html
@@ -14,8 +14,9 @@
     @@include('./includes/mobile-menu.html')
     <div class="container-fluid">
         @@include('./includes/header.html')
-        <h1 class="hero-header">Media</h1>
-        <section class="media-hero page-section row"></section>
+        <section class="media-hero page-section row">
+            <h1 class="hero-header">Media</h1>
+        </section>
         <section class="media-content page-section row">
             <div class="media-container">
                 <h1 class="red">Young Americans Promo 1</h1>
