--- a/src/gigs.html
+++ b/src/gigs.html
@@ -31,6 +31,20 @@
                 <p class="white">The Young Americans (David Bowie Tribute Band) are playing All Bowie All Night. Expect to sing along with the hits (Changes, Space Oddity, Rebel Rebel), dance (Let's Dance, Golden Years, Fame) and celebrate the vast song catalog of the most unique artist of all.</p>
             </div>
         </section>
+        <section class="gigs-content page-section row">
+            <div class="gig-info">
+                <h2 class="red">Under Pressure 3: Bowie and Queen Tribute Night</h2>
+                <p class="white">Saturday, October 14, 2017</p>
+                <p class="white">9:00 PM - 12:00 AM</p>
+
+                <p class="white">Olympia's Zorba Music Hall, Lowell, MA
+                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/Olympia's+Zorba+Music+Hall/@42.6462018,-71.3160364,15z/data=!4m2!3m1!1s0x0:0x922b064e7f32cc6d?sa=X&ved=0ahUKEwjU86K2k4nUAhVB1RoKHeSRB1wQ_BIIbDAK">Map</a>
+                </p>
+                <a class="block facebook-link" href="https://www.facebook.com/events/458038717877971/">Facebook Event</a>
+                <p class="white">The Young Americans and Gunpowder Gelatine are back again with they're electricfying tribute shows to the music David Bowie and Queen.</p>
+                <a target="_blank" href="https://big-crush-records.ticketleap.com/under-pressure---a-queen-and-david-bowie-tribute/" class="buy-ticket-link block facebook-link">Buy Tickets</a>
+            </div>
+        </section>
         @@include('./includes/footer.html')
     </div>
 </div>
