--- a/src/media.html
+++ b/src/media.html
@@ -15,11 +15,75 @@
     <div class="container-fluid">
         @@include('./includes/header.html')
         <section class="media-hero page-section row">
-            <h1 class="hero-header">Media</h1>
+            <h1 class="hero-header">Gallery</h1>
+            <p class="white photo-disclaimer"><em>All photos by <a href="https://www.otaviophoto.com/" target="_blank">Otavio Photo</a></em></p>
+            <div id="media-gallery-slider">
+                <div class="media-image-wrapper">
+                    <img class="fluid-img"  alt="Gallery" src="images/gallery/IMG_0080.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img"  alt="Gallery" data-lazy="images/gallery/IMG_0337.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0347.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0370.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0450.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img"alt="Gallery"  data-lazy="images/gallery/IMG_0535.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0603.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0622.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0635.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0645.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0656.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                 <img class="fluid-img" alt="Gallery" data-lazy="images/gallery/IMG_0718.jpg" />
+                </div>
+                <div>
+                 <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0745.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                 <img class="fluid-img" alt="Gallery" data-lazy="images/gallery/IMG_0807.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0823.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0839.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0938.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_0989.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_1103.jpg" />
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img" alt="Gallery"  data-lazy="images/gallery/IMG_1129.jpg" />
+                </div>
+            </div>
         </section>
+        <h1 class="hero-header">Video</h1>
         <section class="media-content page-section row">
             <div class="media-container">
-                <h1 class="red">Young Americans Promo 1</h1>
+                <h1 class="red">Young Americans <br/> Promo 1</h1>
                 <p class="white">Thirsty Moose Taphouse, Portsmouth NH</p>
                 <p class="white">December 29th, 2016</p>
                 <div class="embed-wrapper">
