Adding min-height to slider and social share images

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="http://www.youngamericansbowie.com/images/SocialShare.jpg" />
+    <meta property="og:description" content="Boston's David Bowie tribute band." />
+    <meta property="og:url" content="http://www.youngamericansbowie.com/" />
+    <meta property="og:title" content="The Young Americans" />
     <title>Young Americans - Boston David Bowie Tribute Band</title>
     <!-- bower:css -->
     <!-- endinject -->
