Adding new gigs for gigs page

--- a/src/gigs.html
+++ b/src/gigs.html
@@ -20,15 +20,15 @@
         </section>
         <section class="gigs-content page-section row">
             <div class="gig-info">
-                <h2 class="red">David Bowie Tribute Night</h2>
-                <p class="white">Saturday, June 24, 2017</p>
-                <p class="white">9:00 PM - 12:00 AM</p>
+                <h2 class="red">Young Americans (David Bowie Tribute) Live at The Vanderbilt</h2>
+                <p class="white">Saturday, September 9, 2017</p>
+                <p class="white">10:30 PM - 1:30 AM</p>
 
-                <p class="white">The New World Tavern, Plymouth, MA
-                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/The+New+World+Tavern/@41.9568809,-70.6651169,15z/data=!4m2!3m1!1s0x0:0xdc14791d322264f?sa=X&ved=0ahUKEwj8i7-un7TSAhXk34MKHRpYBDoQ_BIIdDAK">Map</a>
+                <p class="white">Vanderbilt Kitchen & Bar, Boston, MA
+                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/Vanderbilt+Kitchen+%26+Bar/@42.357988,-71.05469,15z/data=!4m5!3m4!1s0x0:0x647f219390728eb6!8m2!3d42.357988!4d-71.05469">Map</a>
                 </p>
-                <a class="block facebook-link" href="https://www.facebook.com/events/688312418006655/">Facebook Event</a>
-                <p class="white">The Young Americans (David Bowie Tribute Band) are playing All Bowie All Night. Expect to sing along with the hits (Changes, Space Oddity, Rebel Rebel), dance (Let's Dance, Golden Years, Fame) and celebrate the vast song catalog of the most unique artist of all.</p>
+                <a class="block facebook-link" href="https://www.facebook.com/events/247905639034176">Facebook Event</a>
+                <p class="white">The Young Americans bring to life a night of dancing and sing-a-longs to David Bowie's vast catalog of legendary songs including "Changes", "Let's Dance", "Space Oddity (Major Tom)" and many more.</p>
             </div>
         </section>
         <section class="gigs-content page-section row">
@@ -43,6 +43,36 @@
                 <a class="block facebook-link" href="https://www.facebook.com/events/458038717877971/">Facebook Event</a>
                 <p class="white">The Young Americans and Gunpowder Gelatine are back again with they're electricfying tribute shows to the music David Bowie and Queen.</p>
                 <a target="_blank" href="https://big-crush-records.ticketleap.com/under-pressure---a-queen-and-david-bowie-tribute/" class="buy-ticket-link block facebook-link">Buy Tickets</a>
+            </div>
+        </section>
+        <section class="gigs-content page-section row">
+            <div class="gig-info">
+                <h2 class="red">The Young Americans, Bikini Whale & The Ad Seeds at ONCE Ballroom</h2>
+                <p class="white">Saturday, October 28, 2017</p>
+                <p class="white">8:45 PM</p>
+
+                <p class="white">ONCE Ballroom, Somerville, MA
+                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/ONCE+Ballroom/@42.3882916,-71.1059668,17z/data=!4m8!1m2!2m1!1sonce+ballroom+somerville+google+maps!3m4!1s0x89e37731fb121259:0xb5e4cd3158281b2e!8m2!3d42.3882883!4d-71.1037837">Map</a>
+                </p>
+                <a class="block facebook-link" href="https://www.facebook.com/events/358635814567106/">Facebook Event</a>
+                <p class="white">Halloween Weekend at ONCE Ballroom Tribute Show.
+                    Bikini Whale (The B-52's)
+                    The Ad-Seeds (Nick Cave & the Bad Seeds)
+                    The Young Americans (David Bowie)</p>
+                <a target="_blank" href="http://www.ticketfly.com/purchase/event/1544497?utm_source=fbTfly&utm_medium=ampOfficialEvent" class="buy-ticket-link block facebook-link">Buy Tickets</a>
+            </div>
+        </section>
+        <section class="gigs-content page-section row">
+            <div class="gig-info">
+                <h2 class="red">David Bowie Tribute Night with The Young Americans</h2>
+                <p class="white">Saturday, December 9, 2017</p>
+                <p class="white">9:00 PM - 12:00 AM</p>
+
+                <p class="white">New World Tavern, Plymouth, MA
+                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/Olympia's+Zorba+Music+Hall/@42.6462018,-71.3160364,15z/data=!4m2!3m1!1s0x0:0x922b064e7f32cc6d?sa=X&ved=0ahUKEwjU86K2k4nUAhVB1RoKHeSRB1wQ_BIIbDAK">Map</a>
+                </p>
+                <a class="block facebook-link" href="https://www.facebook.com/events/1877398209246417/">Facebook Event</a>
+                <p class="white">The Young Americans are back in Plymouth playing all your favorite Bowie tunes all night! Maybe Bing Crosby will come out for a "Little Drummer Boy" duet.</p>
             </div>
         </section>
         @@include('./includes/footer.html')
