Adding more videos - December 3rd 2017

--- a/src/media.html
+++ b/src/media.html
@@ -111,6 +111,36 @@
                 </div>
             </div>
         </section>
+        <section class="media-content page-section row">
+            <div class="media-container">
+                <h1 class="red">"Let's Dance" - Live</h1>
+                <p class="white">Vanderbilt Kitchen and Bar, Boston MA</p>
+                <p class="white">September 9, 2017</p>
+                <div class="embed-wrapper">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/3dmpQ3lL9-A" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        <section class="media-content page-section row">
+            <div class="media-container">
+                <h1 class="red">"Changes" - Live</h1>
+                <p class="white">ONCE Ballroom, Somerville MA</p>
+                <p class="white">October 28, 2017</p>
+                <div class="embed-wrapper">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/P8Dv0Rgqj6o" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        <section class="media-content page-section row">
+            <div class="media-container">
+                <h1 class="red">"Rebel Rebel" - Live</h1>
+                <p class="white">ONCE Ballroom, Somerville MA</p>
+                <p class="white">Octover 28, 2017</p>
+                <div class="embed-wrapper">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/sJ_Kuga_KfM" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
         @@include('./includes/footer.html')
     </div>
 </div>
