New promo and removed December Plymouth gig

--- a/src/media.html
+++ b/src/media.html
@@ -99,11 +99,9 @@
         <h1 class="hero-header">Video</h1>
         <section class="media-content page-section row">
             <div class="media-container">
-                <h1 class="red">Young Americans <br/> Promo 1</h1>
-                <p class="white">Thirsty Moose Taphouse, Portsmouth NH</p>
-                <p class="white">December 29th, 2016</p>
+                <h1 class="red">Young Americans <br/> Promo </h1>
                 <div class="embed-wrapper">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/h8OabhL_evk" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/gQSP-OgFuak" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
